Manager FrequentChores display and archiving. Return archive back fix
