# backend-fltshr/src/main/java/com/zychp/backendfltshr/model/chore/frequentchores/FrequentChoreDTO.java
@@ -9,6 +9,7 @@ public class FrequentChoreDTO {
     private String description;
     private Long durationDays;
     private Long frequencyDays;
+    private Boolean archived;
 
     public static FrequentChoreDTO valueOf(FrequentChore entity) {
         FrequentChoreDTO dto = new FrequentChoreDTO();
@@ -17,6 +18,7 @@ public class FrequentChoreDTO {
         dto.setDescription(entity.getDescription());
         dto.setDurationDays(entity.getDurationDays());
         dto.setFrequencyDays(entity.getFrequencyDays());
+        dto.setArchived(entity.getArchived());
         return dto;
     }
 }
